Updater cosmetic changes + Supplier List + Validation of TenderID by JavaScript